syntax = "proto3";

package comments;

// The gRPC service definition
service CommentService {
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
  rpc LivenessProbe(Empty) returns (HealthResponse);
  rpc ReadinessProbe(Empty) returns (HealthResponse);

  rpc CreateComment(CreateCommentRequest) returns (Comment);
  rpc GetComments(Empty) returns (GetCommentsResponse);
  rpc GetCommentsByTaskId(TaskRequest) returns (GetCommentsResponse);
  rpc GetCommentById(CommentRequest) returns (Comment);
  rpc UpdateComment(UpdateCommentRequest) returns (Comment);
  rpc DeleteComment(CommentRequest) returns (Empty);
}

// Message definitions
message Empty {}

message HealthRequest {}
message HealthResponse {
  string status = 1;
}

message Comment {
  int32 id = 1;
  string author = 2;
  string content = 3;
  int32 taskId = 4;
}

message CreateCommentRequest {
  string author = 1;
  string content = 2;
  int32 taskId = 3;
}

message TaskRequest {
  int32 taskId = 1;
}

message CommentRequest {
  int32 id = 1;
}

message UpdateCommentRequest {
  int32 id = 1;
  string content = 2;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}